--- a/CompositePattern/CompositePattern/CompositePattern.csproj
+++ b/CompositePattern/CompositePattern/CompositePattern.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="File.cs" />
     <Compile Include="Folder.cs" />
-    <Compile Include="IExplorer.cs" />
+    <Compile Include="IEntry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
